# hasher

./: .gitignore  Cargo.toml  README.md  manifest.json
.github/workflows/: ci.yml
src/: algorithms.rs  cli.rs  hasher.rs  main.rs  manifest.rs  output.rs
