[package]
name = "hasher"
version = "0.1.0"
edition = "2021"
description = "Universal file integrity tool — generate and verify hashes across all major algorithms"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/SEU_USUARIO/hasher"
keywords = ["hash", "integrity", "sha256", "blake3", "checksum"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap       = { version = "4", features = ["derive"] }
sha2       = "0.10"
sha3       = "0.10"
blake3     = "1"
blake2     = "0.10"
md-5       = "0.10"
ripemd     = "0.1"
crc32fast  = "1"
rayon      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"
